k8s/docs/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: codewire-docs
  labels:
    app: codewire-docs
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: codewire-docs
