k8s/docs/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: codewire-docs
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-codewire"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - codewire.sh
      secretName: codewire-docs-tls
  rules:
    - host: codewire.sh
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: codewire-docs
                port:
                  name: http
